objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Commissioning</fullName>
        <description>used by O&amp;M to log preoperational or operational commissioning cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Deployment Review</fullName>
        </values>
        <values>
            <fullName>Escalated to Director</fullName>
        </values>
        <values>
            <fullName>Escalated to Regional Manager</fullName>
        </values>
        <values>
            <fullName>Escalated to SPG</fullName>
        </values>
        <values>
            <fullName>Inventory Fulfillment</fullName>
        </values>
        <values>
            <fullName>New Case</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold - RMA</fullName>
        </values>
        <values>
            <fullName>On Hold - Waiting Customer Response</fullName>
        </values>
        <values>
            <fullName>On Hold - Waiting for Parts</fullName>
        </values>
        <values>
            <fullName>On Hold - Weather Advisory</fullName>
        </values>
        <values>
            <fullName>Ops Review</fullName>
        </values>
        <values>
            <fullName>Pending Quote</fullName>
        </values>
        <values>
            <fullName>Ready to Schedule</fullName>
        </values>
        <values>
            <fullName>Scheduled</fullName>
        </values>
        <values>
            <fullName>Subcontracted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Construction Closeout</fullName>
        <description>need definition</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Deployment Review</fullName>
        </values>
        <values>
            <fullName>Escalated to Director</fullName>
        </values>
        <values>
            <fullName>Escalated to Regional Manager</fullName>
        </values>
        <values>
            <fullName>Escalated to SPG</fullName>
        </values>
        <values>
            <fullName>Inventory Fulfillment</fullName>
        </values>
        <values>
            <fullName>New Case</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold - RMA</fullName>
        </values>
        <values>
            <fullName>On Hold - Waiting Customer Response</fullName>
        </values>
        <values>
            <fullName>On Hold - Waiting for Parts</fullName>
        </values>
        <values>
            <fullName>On Hold - Weather Advisory</fullName>
        </values>
        <values>
            <fullName>Ops Review</fullName>
        </values>
        <values>
            <fullName>Pending Quote</fullName>
        </values>
        <values>
            <fullName>Ready to Schedule</fullName>
        </values>
        <values>
            <fullName>Scheduled</fullName>
        </values>
        <values>
            <fullName>Subcontracted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>EPC Warranty Claim</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Accepted</fullName>
        </values>
        <values>
            <fullName>Additional Information Required</fullName>
        </values>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed %28Rejected%29</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Under Review</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Landscaping%2FWashing</fullName>
        <description>used by O&amp;M team for scheduled landscaping and module washings</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Deployment Review</fullName>
        </values>
        <values>
            <fullName>Escalated to Director</fullName>
        </values>
        <values>
            <fullName>Escalated to Regional Manager</fullName>
        </values>
        <values>
            <fullName>Escalated to SPG</fullName>
        </values>
        <values>
            <fullName>Inventory Fulfillment</fullName>
        </values>
        <values>
            <fullName>New Case</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold - RMA</fullName>
        </values>
        <values>
            <fullName>On Hold - Waiting Customer Response</fullName>
        </values>
        <values>
            <fullName>On Hold - Waiting for Parts</fullName>
        </values>
        <values>
            <fullName>On Hold - Weather Advisory</fullName>
        </values>
        <values>
            <fullName>Ops Review</fullName>
        </values>
        <values>
            <fullName>Pending Quote</fullName>
        </values>
        <values>
            <fullName>Ready to Schedule</fullName>
        </values>
        <values>
            <fullName>Scheduled</fullName>
        </values>
        <values>
            <fullName>Subcontracted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Maintenance Case</fullName>
        <description>used for maintenance cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Deployment Review</fullName>
        </values>
        <values>
            <fullName>Escalated to Director</fullName>
        </values>
        <values>
            <fullName>Escalated to Regional Manager</fullName>
        </values>
        <values>
            <fullName>Escalated to SPG</fullName>
        </values>
        <values>
            <fullName>Inventory Fulfillment</fullName>
        </values>
        <values>
            <fullName>New Case</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold - RMA</fullName>
        </values>
        <values>
            <fullName>On Hold - Waiting Customer Response</fullName>
        </values>
        <values>
            <fullName>On Hold - Waiting for Parts</fullName>
        </values>
        <values>
            <fullName>On Hold - Weather Advisory</fullName>
        </values>
        <values>
            <fullName>Ops Review</fullName>
        </values>
        <values>
            <fullName>Pending Quote</fullName>
        </values>
        <values>
            <fullName>Ready to Schedule</fullName>
        </values>
        <values>
            <fullName>Scheduled</fullName>
        </values>
        <values>
            <fullName>Subcontracted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>O%26M Admin Support</fullName>
        <description>to be used by O&amp;M Team to request internal support, mostly via email to case</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Deployment Review</fullName>
        </values>
        <values>
            <fullName>Escalated to Director</fullName>
        </values>
        <values>
            <fullName>Escalated to Regional Manager</fullName>
        </values>
        <values>
            <fullName>Escalated to SPG</fullName>
        </values>
        <values>
            <fullName>Inventory Fulfillment</fullName>
        </values>
        <values>
            <fullName>New Case</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold - RMA</fullName>
        </values>
        <values>
            <fullName>On Hold - Waiting Customer Response</fullName>
        </values>
        <values>
            <fullName>On Hold - Waiting for Parts</fullName>
        </values>
        <values>
            <fullName>On Hold - Weather Advisory</fullName>
        </values>
        <values>
            <fullName>Ops Review</fullName>
        </values>
        <values>
            <fullName>Pending Quote</fullName>
        </values>
        <values>
            <fullName>Ready to Schedule</fullName>
        </values>
        <values>
            <fullName>Scheduled</fullName>
        </values>
        <values>
            <fullName>Subcontracted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Performance Investigation</fullName>
        <description>managed cases by resource group related to performance of assets</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Deployment Review</fullName>
        </values>
        <values>
            <fullName>Escalated to Director</fullName>
        </values>
        <values>
            <fullName>Escalated to Regional Manager</fullName>
        </values>
        <values>
            <fullName>Escalated to SPG</fullName>
        </values>
        <values>
            <fullName>Inventory Fulfillment</fullName>
        </values>
        <values>
            <fullName>New Case</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold - RMA</fullName>
        </values>
        <values>
            <fullName>On Hold - Waiting Customer Response</fullName>
        </values>
        <values>
            <fullName>On Hold - Waiting for Parts</fullName>
        </values>
        <values>
            <fullName>On Hold - Weather Advisory</fullName>
        </values>
        <values>
            <fullName>Ops Review</fullName>
        </values>
        <values>
            <fullName>Pending Quote</fullName>
        </values>
        <values>
            <fullName>Ready to Schedule</fullName>
        </values>
        <values>
            <fullName>Scheduled</fullName>
        </values>
        <values>
            <fullName>Subcontracted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Project</fullName>
        <description>One-off projects such as due diligence visits, retrofits/rebuilds, DAS replacements</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Deployment Review</fullName>
        </values>
        <values>
            <fullName>Escalated to Director</fullName>
        </values>
        <values>
            <fullName>Escalated to Regional Manager</fullName>
        </values>
        <values>
            <fullName>Escalated to SPG</fullName>
        </values>
        <values>
            <fullName>Inventory Fulfillment</fullName>
        </values>
        <values>
            <fullName>New Case</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold - RMA</fullName>
        </values>
        <values>
            <fullName>On Hold - Waiting Customer Response</fullName>
        </values>
        <values>
            <fullName>On Hold - Waiting for Parts</fullName>
        </values>
        <values>
            <fullName>On Hold - Weather Advisory</fullName>
        </values>
        <values>
            <fullName>Ops Review</fullName>
        </values>
        <values>
            <fullName>Pending Quote</fullName>
        </values>
        <values>
            <fullName>Ready to Schedule</fullName>
        </values>
        <values>
            <fullName>Scheduled</fullName>
        </values>
        <values>
            <fullName>Subcontracted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Service Case</fullName>
        <description>used for all service related cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Deployment Review</fullName>
        </values>
        <values>
            <fullName>Escalated to Director</fullName>
        </values>
        <values>
            <fullName>Escalated to Regional Manager</fullName>
        </values>
        <values>
            <fullName>Escalated to SPG</fullName>
        </values>
        <values>
            <fullName>Inventory Fulfillment</fullName>
        </values>
        <values>
            <fullName>New Case</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold - RMA</fullName>
        </values>
        <values>
            <fullName>On Hold - Waiting Customer Response</fullName>
        </values>
        <values>
            <fullName>On Hold - Waiting for Parts</fullName>
        </values>
        <values>
            <fullName>On Hold - Weather Advisory</fullName>
        </values>
        <values>
            <fullName>Ops Review</fullName>
        </values>
        <values>
            <fullName>Pending Quote</fullName>
        </values>
        <values>
            <fullName>Ready to Schedule</fullName>
        </values>
        <values>
            <fullName>Scheduled</fullName>
        </values>
        <values>
            <fullName>Subcontracted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Warranty</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Accepted</fullName>
        </values>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>New Case</fullName>
        </values>
        <values>
            <fullName>On Hold - RMA</fullName>
        </values>
        <values>
            <fullName>On Hold - Waiting Customer Response</fullName>
        </values>
        <values>
            <fullName>On Hold - Waiting for Parts</fullName>
        </values>
        <values>
            <fullName>On Hold - Weather Advisory</fullName>
        </values>
        <values>
            <fullName>Pending Review</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Subcontracted</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>APLineTotal__c</fullName>
        <description>rolls up AP Line Total amount- used with RH</description>
        <label>AP Line Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Gross_Profit__c</fullName>
        <description>formula calculates $ amount as “Actual Price” minus the sum of “Actual Material Cost” and “Actual Labor Cost”.</description>
        <formula>Actual_Price__c - ( Actual_Material_Cost__c +  Actual_Labor_Costs__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula calculates $ amount as “Actual Price” minus the sum of “Actual Material Cost” and “Actual Labor Cost”.</inlineHelpText>
        <label>Actual Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Gross_Profit_x__c</fullName>
        <description>Formula calculates % amount as “Actual Price” minus the sum of “Actual Material Cost” and “Actual Labor Cost” divided by “Actual Price</description>
        <formula>Actual_Gross_Profit__c / Actual_Price__c</formula>
        <inlineHelpText>Formula calculates % amount as “Actual Price” minus the sum of “Actual Material Cost” and “Actual Labor Cost” divided by “Actual Price</inlineHelpText>
        <label>Actual Gross Profit %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Labor_Costs__c</fullName>
        <label>Actual Labor Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Material_Cost__c</fullName>
        <label>Actual Material Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Price__c</fullName>
        <label>Actual Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Holds_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>checkbox that allows multiple holds to be used on this case, can only be edited by O&amp;M Director</inlineHelpText>
        <label>Additional Holds Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admin_Support_Completion_Date__c</fullName>
        <description>date field used by O&amp;M admin staff to show the date a request for internal support was completed</description>
        <inlineHelpText>enter date request was completed</inlineHelpText>
        <label>Admin Support Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Admin_Support_Est_Completion_Date__c</fullName>
        <description>date field used by O&amp;M to estimate completion date of internal O&amp;M request for support</description>
        <inlineHelpText>date field used to estimate completion date of internal O&amp;M request for support</inlineHelpText>
        <label>Admin Support Est Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alert_ID__c</fullName>
        <description>used with email to case, captures the alert ID from the subject of the email
only for powertrack emails
works via trigger</description>
        <inlineHelpText>captures the alert ID from the subject of the email</inlineHelpText>
        <label>Alert ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AmountBilled__c</fullName>
        <description>used with rollup helper to rollup billing lines</description>
        <label>Amount Billed</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_of_days_on_most_recent_status__c</fullName>
        <description>The amount of days a Case has been on its current status, updated whenever the status changes.</description>
        <formula>IF(
OR(
ISPICKVAL(Status,&quot;New Case&quot;),
ISPICKVAL(Status,&quot;Deployment Review&quot;),
ISPICKVAL(Status,&quot;Inventory Fulfillment&quot;),
ISPICKVAL(Status,&quot;Pending Quote&quot;),
ISPICKVAL(Status,&quot;On Hold - Waiting Customer Response&quot;),
ISPICKVAL(Status,&quot;On Hold - Waiting for Parts&quot;),
ISPICKVAL(Status,&quot;On Hold - RMA&quot;),
ISPICKVAL(Status,&quot;On Hold - Weather Advisory&quot;),
ISPICKVAL(Status,&quot;ON HOLD Follow Up&quot;),
ISPICKVAL(Status,&quot;Ready to Schedule&quot;),
ISPICKVAL(Status,&quot;Scheduled&quot;),
ISPICKVAL(Status,&quot;Ops Review&quot;),
ISPICKVAL(Status,&quot;Escalated to SPG&quot;),
ISPICKVAL(Status,&quot;Escalated to Regional Manager&quot;),
ISPICKVAL(Status,&quot;Escalated to Director&quot;),
ISPICKVAL(Status,&quot;Subcontracted&quot;),
ISPICKVAL(Status,&quot;Closed&quot;)
), NOW() - Start_Date_of_Most_Recent_Status_Change2__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The amount of days a Case has been on its current status, updated whenever the status changes.</inlineHelpText>
        <label>Time in Current Status</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billable_Con_Reqs__c</fullName>
        <formula>IF( 
Count_Billable_Con_Reqs__c &gt; 0, &quot;Yes&quot;, 
&quot;No&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>determines if there are any billable service requisitions associated with the service visits tied to this case.</inlineHelpText>
        <label>Billable Con Reqs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billable_Visits__c</fullName>
        <description>used with roll up helper</description>
        <inlineHelpText>displays Yes if any related service visits  have YES in billable field</inlineHelpText>
        <label>Billable Visits</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Status__c</fullName>
        <description>used for reporting/viewing purposes to see what has been billed vs not billed</description>
        <inlineHelpText>Completed - Billing has been posted/completed; 
In process - Billing has been created but is not completed/posted; 
Needs to be Billed - is a billable visit but billing has yet to be created; 
Not Billable - visit does not contain any billable items.</inlineHelpText>
        <label>Billing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Needs to be Billed</fullName>
                </value>
                <value>
                    <fullName>Not Billable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <description>Determines what branch needs to address the case.</description>
        <inlineHelpText>brought over from the related service contract</inlineHelpText>
        <label>Branch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Berkeley</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Mid Atlantic</fullName>
                </value>
                <value>
                    <fullName>New England</fullName>
                </value>
                <value>
                    <fullName>Nor Cal</fullName>
                </value>
                <value>
                    <fullName>Oakland</fullName>
                </value>
                <value>
                    <fullName>San Diego</fullName>
                </value>
                <value>
                    <fullName>So Cal</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>Midwest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRG_s__c</fullName>
        <description>counts # of CRG&apos;s associated with related Service Visits, used with RH to help determine cases with CRG&apos;s</description>
        <inlineHelpText>counts # of CRG&apos;s associated with related Service Visits</inlineHelpText>
        <label># CRG&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CY_Landscaping__c</fullName>
        <inlineHelpText>count of 1 if within current billing year</inlineHelpText>
        <label>CY Landscaping</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CY_Module_Washing__c</fullName>
        <description>count of 1 if close date of case falls between Current Year Contract Start &amp; End Date from related Contract.  UPdated via a WF based on Status = Closed...used in a Roll Up to count total per year on Contract.</description>
        <inlineHelpText>count of 1 if close date of case falls between Current Year Contract Start &amp; End Date from related Contract</inlineHelpText>
        <label>CY Module Washing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseRecordTypeName__c</fullName>
        <description>used for O&amp;M Reports</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseSafeId__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseSafeId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Cause__c</fullName>
        <inlineHelpText>What caused the problem on site, to be filled out after someone has been to site or remotely figured out the problem</inlineHelpText>
        <label>Case Cause</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Installation Error</fullName>
                </value>
                <value>
                    <fullName>Product Error</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Electrical Component Failure</fullName>
                </value>
                <value>
                    <fullName>Utility Outage</fullName>
                </value>
                <value>
                    <fullName>Design Issue</fullName>
                </value>
                <value>
                    <fullName>Metrology Error</fullName>
                </value>
                <value>
                    <fullName>Model Error</fullName>
                </value>
                <value>
                    <fullName>Soiling</fullName>
                </value>
                <value>
                    <fullName>False Alert - Duplicate</fullName>
                </value>
                <value>
                    <fullName>False Alert - Shade</fullName>
                </value>
                <value>
                    <fullName>False Alert - No Action Required</fullName>
                </value>
                <value>
                    <fullName>False Alert - Non-managed Site</fullName>
                </value>
                <value>
                    <fullName>False Alert - Other</fullName>
                </value>
                <value>
                    <fullName>False Alert - Planned Site Activity</fullName>
                </value>
                <value>
                    <fullName>Auto-Resolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Closure_Date_Sent__c</fullName>
        <inlineHelpText>Date the case closure report was sent out</inlineHelpText>
        <label>Case Closure Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Closure_Sent_To__c</fullName>
        <inlineHelpText>The party who the case closure report was sent to</inlineHelpText>
        <label>Case Closure Sent To</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Eligible__c</fullName>
        <formula>AND(
NOT(ISPICKVAL(Status , &quot;Completed&quot;)),
NOT(ISPICKVAL(Status , &quot;Closed&quot;)),
NOT(ISPICKVAL(Status, &quot;Active&quot;)),
NOT(ISPICKVAL(Status , &quot;Closed - Issue Resolved Automatically&quot;)),

OR(
RecordTypeId = &quot;01234000000BnNjAAK&quot;,
RecordTypeId = &quot;012340000007kUMAAY&quot;,
RecordTypeId = &quot;012340000007kUHAAY&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_End_Date__c</fullName>
        <inlineHelpText>Manual field the manager enters to reflect the case resolution date</inlineHelpText>
        <label>Case Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>The manual field the manager enters to reflect the case start date</inlineHelpText>
        <label>Case Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <inlineHelpText>identifies request in terms of type of work</inlineHelpText>
        <label>Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>COO</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                    <isActive>false</isActive>
                    <label>Administrative</label>
                </value>
                <value>
                    <fullName>Commissioning</fullName>
                    <isActive>false</isActive>
                    <label>Commissioning</label>
                </value>
                <value>
                    <fullName>Handof</fullName>
                    <isActive>false</isActive>
                    <label>Handof</label>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                    <isActive>false</isActive>
                    <label>Miscellaneous</label>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                    <isActive>false</isActive>
                    <label>Onboarding</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cause_of_Incident__c</fullName>
        <description>will be populated automatically with &quot;Excluded&quot; or &quot;Included&quot; per the Service Contract for the Incident Type and the selected Incident Type from the Incident Type field</description>
        <formula>IF(ISPICKVAL(ServiceContract_Case__r.Company_Caused_Downtime__c , &quot;Included&quot;)
&amp;&amp;
 ISPICKVAL(Externally_Caused_Event__c , &quot;Customer Caused Downtime&quot;) , &quot;Included- Customer Caused Downtime&quot;, 

 IF(ISPICKVAL(ServiceContract_Case__r.Delay_Equipment_out_of_Warranty__c , &quot;Included&quot;)
&amp;&amp;
 ISPICKVAL(Externally_Caused_Event__c , &quot;Delay (Equipment out of Warranty)&quot;) , &quot;Included- Delay (Equipment out of Warranty)&quot;,

IF(ISPICKVAL(ServiceContract_Case__r.Delay_Manufacturer_Caused__c , &quot;Included&quot;)
&amp;&amp;
 ISPICKVAL(Externally_Caused_Event__c , &quot;Delay (Manufacturer Caused)&quot;) , &quot;Included- Delay (Manufacturer Caused)&quot;,

IF(ISPICKVAL(ServiceContract_Case__r.Force_Majeure__c , &quot;Included&quot;)
&amp;&amp;
 ISPICKVAL( Externally_Caused_Event__c , &quot;Force Majeure&quot;) , &quot;Included-Force Majeure&quot;,

IF(ISPICKVAL(ServiceContract_Case__r.Spare_Parts_Not_In_Stock__c , &quot;Included&quot;)
&amp;&amp;
 ISPICKVAL( Externally_Caused_Event__c , &quot;Spare Parts Not In Stock&quot;) , &quot;Included-Spare Parts Not In Stock&quot;,

IF(ISPICKVAL(ServiceContract_Case__r.Other_Incident__c , &quot;Included&quot;) 
&amp;&amp;
 ISPICKVAL(Externally_Caused_Event__c, &quot;Other&quot;) , &quot;Included-Other&quot;,

IF(ISPICKVAL(ServiceContract_Case__r.Preventative_Maintenance__c , &quot;Included&quot;)
&amp;&amp;
 ISPICKVAL(Externally_Caused_Event__c, &quot;Preventative Maintenance&quot;) , &quot;Included-Preventative Maintenance&quot;,


IF(ISPICKVAL(ServiceContract_Case__r.Reactive_Maintenance__c , &quot;Included&quot;)
&amp;&amp;
 ISPICKVAL(Externally_Caused_Event__c, &quot;Reactive Maintenance&quot;) , &quot;Included-Reactive Maintenance&quot;,

IF(ISPICKVAL(ServiceContract_Case__r.Snow_or_Ice__c , &quot;Included&quot;)
&amp;&amp;
 ISPICKVAL(Externally_Caused_Event__c, &quot;Snow or Ice&quot;) , &quot;Included-Snow or Ice&quot;,

IF(ISPICKVAL(ServiceContract_Case__r.Utility_Outage__c , &quot;Included&quot;)
&amp;&amp;
 ISPICKVAL(Externally_Caused_Event__c, &quot;Utility Outage&quot;) , &quot;Included-Utility Outage&quot;,
&quot;Excluded&quot; ))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cause of Incident</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Request_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Request Submitted</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>